--- a/gp.css
+++ b/gp.css
@@ -108,3 +108,13 @@ footer a{
     opacity: 1;
     right: 0;
 }
+
+ol{
+    font-size: 20px;
+    line-height: 40px;
+}
+
+ul{
+    line-height: 25px; 
+    list-style-type: disc;
+}
