--- a/gp.css
+++ b/gp.css
@@ -118,3 +118,13 @@ ul{
     line-height: 25px; 
     list-style-type: disc;
 }
+
+div.scroll-container {
+    overflow: auto;
+    white-space: nowrap;
+    padding: 10px;
+  }
+  
+div.scroll-container img {
+    padding: 10px;
+  }
